[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/enemy_script.gd" type="Script" id=1]
[ext_resource path="res://materials/anti-jitter.tres" type="Material" id=2]
[ext_resource path="res://assets/16x16/enemies/slime/slime_idle_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://assets/16x16/enemies/slime/slime_idle_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://assets/16x16/enemies/slime/slime_idle_anim_f2.png" type="Texture" id=5]
[ext_resource path="res://assets/16x16/enemies/slime/slime_idle_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://assets/16x16/enemies/slime/slime_idle_anim_f4.png" type="Texture" id=7]
[ext_resource path="res://assets/16x16/enemies/slime/slime_idle_anim_f5.png" type="Texture" id=8]
[ext_resource path="res://assets/16x16/enemies/slime/slime_run_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://assets/16x16/enemies/slime/slime_run_anim_f1.png" type="Texture" id=10]
[ext_resource path="res://assets/16x16/enemies/slime/slime_run_anim_f2.png" type="Texture" id=11]
[ext_resource path="res://assets/16x16/enemies/slime/slime_run_anim_f3.png" type="Texture" id=12]
[ext_resource path="res://assets/16x16/enemies/slime/slime_run_anim_f4.png" type="Texture" id=13]
[ext_resource path="res://assets/16x16/enemies/slime/slime_run_anim_f5.png" type="Texture" id=14]
[ext_resource path="res://objects/enemy_healthbar.tscn" type="PackedScene" id=15]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.2317

[sub_resource type="CircleShape2D" id=3]
radius = 114.775

[sub_resource type="CircleShape2D" id=4]
radius = 286.696

[node name="KinematicBody2D" type="KinematicBody2D" groups=[
"damageable",
"enemy",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 2 )
frames = SubResource( 1 )
animation = "run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SearchRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchRadius"]
shape = SubResource( 3 )

[node name="PlayerFoundRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFoundRadius"]
shape = SubResource( 4 )

[node name="EnemyHealthbar" parent="." instance=ExtResource( 15 )]
position = Vector2( -7, -15 )
[connection signal="body_entered" from="SearchRadius" to="." method="_on_SearchRadius_body_entered"]
[connection signal="body_entered" from="PlayerFoundRadius" to="." method="_on_SearchRadius_body_entered"]
